adding desc to packge.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "fcc-learn-npm-package-json",
 	"author": "Khadija T",
+	"description": "A project about backend development & API using nodejs and Express",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
