--- a/package.json
+++ b/package.json
@@ -1,28 +1,26 @@
 {
-	"name": "fcc-learn-npm-package-json",
-	"author": "Khadija T",
-	"description": "A project about backend development & API using nodejs and Express",
-	"keywords": [
-		"nodejs",
-		"express",
-		"javascript",
-		"freecodecamp"
-	],
-	"license": "MIT",
-	"version": "1.2.0",
-	"dependencies": {
-		"body-parser": "^1.20.0",
-		"cookie-parser": "^1.4.3",
-		"dotenv": "^16.0.1",
-		"express": "^4.14.0",
-		"fcc-express-bground": "https://github.com/freeCodeCamp/fcc-express-bground-pkg.git"
-	},
-	"main": "server.js",
-	"scripts": {
-		"start": "node server.js"
-	},
-	"repository": {
-		"type": "git",
-		"url": "https://idontknow/todo.git"
-	}
+  "name": "fcc-mongo-mongoose-challenges",
+  "version": "0.0.1",
+  "description": "A boilerplate project",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "body-parser": "^1.15.2",
+    "dotenv": "^8.2.0",
+    "express": "^4.12.4",
+    "mongodb": "~3.6.0",
+    "mongoose": "~5.4.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/freeCodeCamp/boilerplate-mongomongoose.git"
+  },
+  "keywords": [
+    "node",
+    "mongoose",
+    "express"
+  ],
+  "license": "MIT"
 }
